--- a/ui/styles/dashboard.css
+++ b/ui/styles/dashboard.css
@@ -1,23 +1,240 @@
 .page {
   background-color: black;
 }
-.page > .movies > .popular > ul {
+
+.page > .movies > .popular,
+.page > .movies > .top-rated,
+.page > .movies > .discover {
+  margin: 2rem 0.5rem;
+  max-width: 100vw;
+  max-height: min-content;
+}
+.page > .movies > .popular > ul,
+.page > .movies > .top-rated > ul,
+.page > .movies > .discover > ul {
   display: flex;
   flex-direction: row;
   overflow: auto;
-  scrollbar-base-color: black;
-  scrollbar-color: black;
+  align-items: center;
+}
+
+/* width */
+ul::-webkit-scrollbar {
+  height: 10px;
+}
+
+/* Track */
+ul::-webkit-scrollbar-track {
+  background: black;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+ul::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+ul::-webkit-scrollbar-thumb:hover {
+  background: #353535;
+}
+
+.page > .movies > .popular > h1,
+.page > .movies > .top-rated > h1,
+.page > .movies > .discover > h1 {
+  font-size: 1.8rem;
+  margin-left: 1rem;
+  margin-top: 0.5rem;
 }
 
 .movie-poster {
   margin: 1rem;
   width: 10rem;
   position: relative;
-  border: groove grey 0.3rem;
+  border: solid rgb(37, 35, 35) 0.1rem;
+  border-radius: 1rem;
+  overflow: hidden;
+  transition: 250ms ease-in-out;
+}
+
+.movie-poster:hover {
+  transform: scale(1.1);
 }
 
 .movie-poster > label {
   position: absolute;
   bottom: 0;
   left: 0;
+}
+
+.see-more {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background-color: #555;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+.see-more > img {
+  margin: auto;
+  width: 1.7rem;
+}
+
+.page > .popup-backdrop > .popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: black;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  z-index: 1100;
+  width: 55%;
+  border: white solid 1px;
+  height: auto;
+  max-height: 50%;
+}
+
+.page > .popup-backdrop > .popup > .popup-details > .title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 1rem;
+  margin-bottom: 1.4rem;
+  margin-left: 1rem;
+  font-size: 26px;
+}
+
+.page > .popup-backdrop > .popup > .popup-details > .title > #close-button {
+  width: 4rem;
+  background-color: #e50914;
+  border: #e50914 solid 0px;
+  border-radius: 3px;
+  padding: 0 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 250ms ease-in-out;
+}
+
+.page > .popup-backdrop > .popup > .popup-details > .details {
+  display: flex;
+  flex-direction: row;
+}
+
+.page > .popup-backdrop > .popup > .popup-details > .details > #poster {
+  width: 10rem;
+  margin: 0 1rem 1rem 1rem;
+}
+
+.page > .popup-backdrop > .popup > .popup-details > .details > .text-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.page
+  > .popup-backdrop
+  > .popup
+  > .popup-details
+  > .details
+  > .text-buttons
+  > .buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 1rem 0;
+}
+
+.page
+  > .popup-backdrop
+  > .popup
+  > .popup-details
+  > .details
+  > .text-buttons
+  > .buttons
+  > #watch-now {
+  background-color: rgb(255, 255, 255);
+  border-radius: 2px;
+  color: black;
+  margin-right: 1rem;
+  height: 2.5rem;
+  width: 8rem;
+  font-weight: 500;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 5px;
+  transition: 250ms ease-in-out;
+}
+
+.page
+  > .popup-backdrop
+  > .popup
+  > .popup-details
+  > .details
+  > .text-buttons
+  > .buttons
+  > #watch-now:hover {
+  transform: scale(1.1);
+}
+
+.page
+  > .popup-backdrop
+  > .popup
+  > .popup-details
+  > .details
+  > .text-buttons
+  > .buttons
+  > #watch-list {
+  border-radius: 50%;
+  transition: 250ms ease-in-out;
+  -webkit-filter: invert(1);
+  filter: invert(1);
+}
+
+.page
+  > .popup-backdrop
+  > .popup
+  > .popup-details
+  > .details
+  > .text-buttons
+  > .buttons
+  > #watch-list:hover {
+  transform: scale(1.1);
+  background-color: #8b8b8b;
+}
+.page
+  > .popup-backdrop
+  > .popup
+  > .popup-details
+  > .details
+  > .text-buttons
+  > .details {
+  margin: 2rem 0;
+}
+
+.page
+  > .popup-backdrop
+  > .popup
+  > .popup-details
+  > .title
+  > #close-button:hover {
+  background-color: #c11119;
+}
+
+.page > .popup-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
 }
